# driving_log_replayer_v2

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  ReleaseNotes.md  compare_results.py  constraints-pip.txt  dependency.repos  index.html  metrics_explanation_ja.md  mkdocs.yml  pyproject.toml  repository.cspell.json  requirements.txt  sitemap.xml  sonar-project.properties  visualize_performance_metrics.py
driving_log_replayer_v2/: CHANGELOG.rst  CMakeLists.txt  Makefile  package.xml
driving_log_replayer_v2/analysis/perception/: analysis.py  config.yaml
driving_log_replayer_v2/config/: qos.yaml
driving_log_replayer_v2/config/publish/: all_components_wo_localization_x2j6gen2.yaml  all_components_x2j6gen2.yaml  autonomous_emergency_braking.yaml  behavior_velocity_planner.yaml  control_validator.yaml  motion_velocity_planner.yaml  planning_control.yaml  planning_control_e2e.yaml  planning_validator.yaml  trajectory_selector_only.yaml  velocity_smoother.yaml
driving_log_replayer_v2/config/publish_and_remap/: all_components_wo_localization_x2j6gen2.yaml  all_components_x2j6gen2.yaml  control_validator.yaml  motion_velocity_planner.yaml  planning_control.yaml  planning_control_e2e.yaml  planning_control_e2e_wo_diffusion_planner.yaml  planning_control_x2j6gen2.yaml  planning_validator.yaml  trajectory_selector.yaml  x2_camera_rec_result_only.yaml  x2_lidar_rec_only.yaml  x2_perception_all.yaml  xx1_perception.yaml
driving_log_replayer_v2/config/remap/: all_components.yaml  x2_activate_camera_rec.yaml  x2_camera_rec_result_only.yaml  x2_lidar_rec_only.yaml  x2_perception.yaml  x2_perception_all.yaml  x2_radar_rec_only.yaml  xx1_perception.yaml  xx1_perception_all.yaml
driving_log_replayer_v2/config/topics/: behavior_velocity_planner.yaml  control_validator.yaml  motion_velocity_planner.yaml  planning_validator.yaml
driving_log_replayer_v2/driving_log_replayer_v2/: annotationless_perception.py  ar_tag_based_localizer.py  diagnostics.py  eagleye.py  evaluation_manager.py  evaluator.py  ground_segmentation.py  ground_segmentation_post_process.py  lanelet2_util.py  launch_config.py  localization.py  localization_position_validator.py  obstacle_segmentation.py  open_loop_trajectory.py  perception.py  perception_2d.py  perception_eval_conversions.py  perception_reproducer.py  performance_diag.py  planning_control.py  pose.py  post_process_evaluator.py  post_process_runner.py  publish_topic_from_rosbag.py  result.py  ros2_utils.py  rosbag.py  scenario.py  time_step_based_trajectory.py  timestep_based_trajectory.py  traffic_light.py  yabloc.py
driving_log_replayer_v2/driving_log_replayer_v2/criteria/: __init__.py  perception.py
driving_log_replayer_v2/driving_log_replayer_v2/ground_segmentation/: evaluation_manager.py  evaluator.py  manager.py  models.py  runner.py
driving_log_replayer_v2/driving_log_replayer_v2/launch/: all.py  all_components.py  annotationless_perception.py  ar_tag_based_localizer.py  argument.py  best_model_comparison.py  camera_2d_detector.py  diagnostics.py  eagleye.py  ground_segmentation.py  localization.py  localization_position_validator.py  ndt_convergence.py  obstacle_segmentation.py  open_loop_trajectory.py  perception.py  perception_2d.py  perception_fp.py  perception_reproducer.py  performance_diag.py  planning_control.py  real_log_sim_comparison.py  rosbag.py  time_step_based_trajectory.py  timestep_based_trajectory.py  topic_relay.py  traffic_light.py  use_case.py  util.py  yabloc.py
driving_log_replayer_v2/driving_log_replayer_v2/perception/: __init__.py  analyze.py  evaluation_manager.py  evaluator.py  manager.py  models.py  perception.py  planning_factor.py  ros2_utils.py  runner.py  stop_reason.py  stop_reason_processor.py  topics.py
driving_log_replayer_v2/driving_log_replayer_v2/perception_fp/: __init__.py  evaluation_manager.py  evaluator.py  models.py  runner.py
driving_log_replayer_v2/driving_log_replayer_v2/post_process/: evaluation_manager.py  evaluator.py  logger.py  ros2_utils.py  runner.py
driving_log_replayer_v2/driving_log_replayer_v2/real_log_sim_comparison/: Makefile  QUICK_START.ja.md  README.ja.md  __init__.py  _cases_config.py  _map.py  _params_utils.py  _runtime_config.py  _sim_runs_config.py  add_steer_deadband_to_report.py  analyze_cases.py  analyze_curve2_per_step.py  analyze_dataset_understeer.py  analyze_per_step.py  analyze_real_curve2.py  analyze_steer_deadband.py  analyze_tc_deadband_cohort.py  analyze_trajectory.py  analyze_worstcase_yaw.py  arx_fit.py  arx_optuna.py  bag_to_scenario.py  collect_datasets.py  collect_raw_rosbags.py  compare_curve2.py  compare_dp_trajectory.py  compare_dp_vs_final.py  compare_logs.py  diagnose_curve2.py  diagnose_departure.py  diagnose_kus_sensitivity.py  download.py  evaluator_node.py  identify_steer_dynamics.py  make_lite.py  multi_dataset_tune.py  perception_reproducer_node.py  physical_validity_report.py  repro_local_sim.sh  run_analysis.py  (+17 more)
driving_log_replayer_v2/launch/: driving_log_replayer_v2.launch.py  post_process.launch.py  pre-process.launch.py  pre_process.launch.py  simulation.launch.py
driving_log_replayer_v2/scripts/: annotationless_perception_evaluator_node.py  ar_tag_based_localizer_evaluator_node.py  best_model_comparison_evaluator_node.py  diagnostics_evaluator_node.py  eagleye_evaluator_node.py  engage_node.py  goal_pose_node.py  ground_segmentation_evaluator_node.py  ground_truth_publisher_node.py  initial_pose_node.py  localization_evaluator_node.py  localization_position_validator_check_prediction_result.py  localization_position_validator_evaluator_node.py  localization_update_result_json.py  obstacle_segmentation_evaluator_node.py  open_loop_trajectory_evaluator_node.py  perception_2d_evaluator_node.py  perception_evaluator_node.py  perception_reproducer_evaluator_node.py  performance_diag_evaluator_node.py  planning_control_evaluator_node.py  publish_topic_from_rosbag_node.py  real_log_sim_comparison_evaluator_node.py  traffic_light_evaluator_node.py  yabloc_evaluator_node.py
driving_log_replayer_v2/test/unittest/: test_diagnostics.py  (+30 more)
(+359 files in other folders)
